--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "request": "^2.67.0",
+    "underscore": "^1.8.3",
     "url-join": "0.0.1",
     "winston": "^2.1.1"
   },
